@@ -1,0 +1,1 @@
+implementation-class=com.cedarsolutions.gradle.CedarAnalysisPlugin
